# pico-template-project

./: CMakeLists.txt  README.md  main.c
4-7-segment/: CMakeLists.txt  main.c
4-7-segment/include/: display.h
blink/: CMakeLists.txt  main.c
